--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,10 @@
 
 html, body { height: 100%; }
+
+a {
+  color: transparent;
+}
+
 body {
   font-family: Helvetica, Arial, sans-serif;
   font-size: 16px;
