--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 * {
   margin: 0px;
   padding: 0px;
+  box-sizing: border-box;
 }
 
 body {
@@ -14,7 +15,20 @@ body {
 }
 
 a {
+  font-weight: 400;
+  cursor: pointer;
+  border-bottom: 2px dotted #aaaaaa;
+  padding-bottom: 2px;
+  text-decoration: none;
+  color: #666666;
+}
+a:visited {
+  color: #aaaaaa;
+}
+a.no-decoration {
   color: transparent;
+  border: none;
+  padding: none;
 }
 
 .header {
@@ -23,6 +37,7 @@ a {
   background-color: black;
   text-align: center;
   box-shadow: 0px 2px 3px rgb(150, 150, 150);
+  font-size: 19px;
 }
 .header span.button {
   text-decoration: none;
@@ -61,7 +76,7 @@ div.introduction-section div#overlay {
 }
 
 .paths-section {
-	height: 600px;
+	height: 400px;
 	display: -webkit-flexbox;
   display: -ms-flexbox;
   display: -webkit-flex;
@@ -128,23 +143,112 @@ div.introduction-section div#overlay {
 	vertical-align: middle;
 }
 
+.wrapper-section > h1 {
+  margin: 15px;
+}
+.wrapper-section hr {
+  width:70%;
+  margin: auto;
+  margin-top: 50px;
+  border: 0;
+  height: 0;
+  border-top:1px solid rgba(0, 0, 0, 0.1);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+.section-separator {
+  margin: 80px;
+}
+
+/* 12-column-based responsive stuff */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+/* for mobile phone, mobile-first design */
+[class*="col-"] {
+  float: left;
+  width: 100%;
+}
+
+.section-footnote {
+  color: gray;
+  text-align: right;
+  margin-top: 10px;
+  margin-right: 10px;
+}
+
+.slot-section {
+  background-image: url('assets/images/haxpor.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 400px;
+  cursor: pointer;
+  position: relative;
+}
+.slot-section .project-meta {
+  position: absolute;
+  left: 5%;
+  top: 50%;
+  margin-top: -30px;
+  z-index: 10;
+  color: white;
+  width: 90%;
+  display: none;
+}
+.project-meta h1 {
+  position: relative;
+  text-align: center;
+}
+.project-meta label {
+  position: relative;
+  text-align: center;
+  display: block;
+  color: rgba(230, 230, 230, 255);
+  font-size: 20px;
+}
+.overlay::before {
+  position: relative;
+  content: "";
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: none;
+  z-index: 0;
+  background-color: rgba(0,0,0,0.5);
+}
+.overlay:hover::before, .overlay:active::before, .overlay:focus::before {
+  display: block;
+}
+.overlay:hover .project-meta, .overlay:active .project-meta, .overlay:focus .project-meta {
+  display: block;
+}
+
+/* animation stuff */
 @-webkit-keyframes comeinLeft {
   0% {
     opacity: 0;
+    filter: alpha(opacity=0);
     -webkit-transform: translateX(20px);
    }
    100% {
      opacity: 1;
+     filter: alpha(opacity=100);
      -webkit-transform: translate(0);
    }
 }
 @keyframes comeinLeft {
   0% {
     opacity: 0;
+    filter: alpha(opacity=0);
     transform: translateX(20px);
    }
    100% {
      opacity: 1;
+     filter: alpha(opacity=100);
      transform: translate(0);
    }
 }
@@ -152,26 +256,68 @@ div.introduction-section div#overlay {
 @-webkit-keyframes comeinRight {
   0% {
     opacity: 0;
+    filter: alpha(opacity=0);
     -webkit-transform: translateX(-20px);
    }
    100% {
      opacity: 1;
+     filter: alpha(opacity=100);
      -webkit-transform: translate(0);
    }
 }
 @keyframes comeinRight {
   0% {
     opacity: 0;
+    filter: alpha(opacity=0);
     transform: translateX(-20px);
    }
    100% {
      opacity: 1;
+     filter: alpha(opacity=100);
      transform: translate(0);
    }
 }
 
-@media screen and (max-width:480px) {
+@media screen and (min-width:480px) {
   .paths-section {
-    height: 400px;
+    height: 600px;
   }
+}
+
+@media screen and (min-width:650px) {
+  .header {
+    font-size: 25px;
+  }
+  /* for tablets */
+  .col-m-1 { width: 8.33%; }
+  .col-m-2 { width: 16.66%; }
+  .col-m-3 { width: 25%; }
+  .col-m-4 { width: 33.33%; }
+  .col-m-5 { width: 41.66%; }
+  .col-m-6 { width: 50%; }
+  .col-m-7 { width: 58.33%; }
+  .col-m-8 { width: 66.66%; }
+  .col-m-9 { width: 75%; }
+  .col-m-10 { width: 83.33%; }
+  .col-m-11 { width: 91.66%; }
+  .col-m-12 { width: 100%; }
+}
+
+@media screen and (min-width:960px) {
+  .header {
+    font-size: 25px;
+  }
+  /* for desktop */
+  .col-1 { width: 8.33%; }
+  .col-2 { width: 16.66%; }
+  .col-3 { width: 25%; }
+  .col-4 { width: 33.33%; }
+  .col-5 { width: 41.66%; }
+  .col-6 { width: 50%; }
+  .col-7 { width: 58.33%; }
+  .col-8 { width: 66.66%; }
+  .col-9 { width: 75%; }
+  .col-10 { width: 83.33%; }
+  .col-11 { width: 91.66%; }
+  .col-12 { width: 100%; }
 }
