fix css class as there is no abzi.co website anymore

--- a/css/main.css
+++ b/css/main.css
@@ -89,7 +89,7 @@ div.introduction-section div#overlay {
   color: white;
 }
 
-.haxpor-img, .abzico-img {
+.haxpor-img, .haxpor-another-img {
   border-radius: 10px;
   margin: 20px;
   height: auto;
